--- a/index.html
+++ b/index.html
@@ -106,6 +106,39 @@
             />
           </svg>
         </code>
+        <div class="main__textBlock">
+          Get the benefits of crypto payment gateway service for your business.
+          Adopt a modern method of crypto payments for your business. Lorenemm
+          Get the benefits of crypto payment gateway service for your business.
+          Adopt a modern method of crypto payments for your business. Lorenemm
+        </div>
+        <h2 class="main__header2">Overview of installing Docker Compose</h2>
+        <div class="main__textBlock">
+          Get the benefits of crypto payment gateway service for your business.
+          Adopt a modern method of crypto payments for your business. Lorenemm
+          Get the benefits of crypto payment gateway service for your business.
+          Adopt a modern method of crypto payments for your business. Lorenemm
+        </div>
+        <div class="skeleton"></div>
+        <div class="main__textBlock">
+          Get the benefits of crypto payment gateway service for your business.
+          Adopt a modern method of crypto payments for your business. Lorenemm
+          Get the benefits of crypto payment gateway service for your business.
+          Adopt a modern method of crypto payments for your business. Lorenemm
+        </div>
+        <h2 class="main__header2">Overview of installing Docker Compose</h2>
+        <div class="main__textBlock">
+          Get the benefits of crypto payment gateway service for your business.
+          Adopt a modern method of crypto payments for your business. Lorenemm
+          Get the benefits of crypto payment gateway service for your business.
+          Adopt a modern method of crypto payments for your business. Lorenemm
+        </div>
+        <div class="main__textBlock">
+          Get the benefits of crypto payment gateway service for your business.
+          Adopt a modern method of crypto payments for your business. Lorenemm
+          Get the benefits of crypto payment gateway service for your business.
+          Adopt a modern method of crypto payments for your business. Lorenemm
+        </div>
       </main>
       <footer></footer>
     </div>
